--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "keywords": [],
   "dependencies": {
     "@google/genai": "^1.5.0",
+    "dotenv": "^16.5.0",
     "yahoo-finance2": "^2.13.3"
   }
 }
